fixing benchmark timing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ pico_enable_stdio_uart(pico-cmsis-benchmark 0)
 pico_enable_stdio_usb(pico-cmsis-benchmark 1)
 
 # Add the standard library to the build
-target_link_libraries(pico-cmsis-benchmark
+target_link_libraries(pico-cmsis-benchmark        
+        pico_rand
         pico_stdlib)
 
 # Add the standard include files to the build
